<resources>

    <string name="app_name">DnD</string>
    <string name="title_activity_sheet">Start</string>
    <string name="title_activity_menu_main">Main Menu</string>
    <string name="hello_first_fragment">Hello</string>
    <string name="previous">prev</string>
    <string name="next">next</string>
    <string name="action_settings">action settings</string>
    <string name="first_fragment_label">first fragment</string>
    <string name="second_fragment_label">second fragment</string>

    <string name="login_needed">Login needed to join a campaign</string>
    <string name="login_failed">Login failed</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="ConfMail">Confirm e-mail</string>
    <string name="ConfPsw">Confirm password</string>
    <string name="OffMode">Offline Mode</string>
    <string name="Compendium">Compendium</string>

    <string name="Stats">Stats</string>
    <string name="Ability">Ability</string>
    <string name="Equip">Equip</string>
    <string name="Spells">Spells</string>
    <string name="Feats">Feats</string>

    <string name="HP">HP</string>
    <string name="HD">HD</string>
    <string name="AC">AC</string>
    <string name="Initiative">Initiative bonus</string>
    <string name="Speed">Speed</string>
    <string name="Proficiency">Proficiency</string>

    <string name="Str">STR</string>
    <string name="Dex">DEX</string>
    <string name="Con">CON</string>
    <string name="Int">INT</string>
    <string name="Wis">WIS</string>
    <string name="Cha">CHA</string>

    <string name="PswRecover">Forgot password?</string>
    <string name="Register">Create account</string>
    <string name="Login">Login</string>
    <string name="AuthFail">Authentication Failed</string>
    <string name="RegFail">Registration failed</string>

    <string name="Acrobatics">Acrobatics</string>
    <string name="Athletics">Athletics</string>
    <string name="Arcana">Arcana</string>
    <string name="Deception">Deception</string>
    <string name="Insight">Insight</string>
    <string name="Knowledge">Knowledge</string>
    <string name="Medicine">Medicine</string>
    <string name="Perception">Perception</string>
    <string name="Stealth">Stealth</string>
    <string name="Survival">Survival</string>
    <string name="imgPick">Choose image from:</string>

    <string name="Equipped">Equipped</string>
    <string name="Bag">Bag</string>
    <string name="Add">Add</string>
    <string name="Remove">Remove</string>

    <string name="SpellName">Name</string>
    <string name="SpellLvl">Lvl</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sheet_drawer">SheetActivityDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="newChar">New Sheet</string>
    <string name="popupName">Name</string>
    <string name="popupSpec">Species</string>
    <string name="popupClass">Class</string>
    <string name="popupLvl">Lvl</string>
    <string name="popupAdd">Add</string>

    <string name="newGroup">New Campaign</string>
    <string name="groupTitle">Create group</string>
    <string name="groupName">Name</string>
    <string name="groupConfirm">Submit</string>

    <string name="popupSelChar">Tap to select a character</string>
    <string name="popupSelQuit">Cancel</string>
    <string name="popupSelOk">Confirm</string>
    <string name="popupQuitNotif">Join Cancelled</string>
    <string name="popupQuitErrChar">Character not found</string>
    <string name="popupQuitSucc">Campaign successfully joined</string>
    <string name="popupJoined">Campaign already Joined</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_campaign">CampaignActivity</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_join_campaign">JoinCampaignActivity</string>

    <string name="saveSucc">Save Successful</string>
    <string name="saveSuccRem">Remote Save Successful</string>
    <string name="succ">Process Successful</string>
    <string name="fail">Process Failed</string>
    <string name="title_activity_compendium">CompendiumActivity</string>
</resources>